--- a/trunk/WebContent/current.html
+++ b/trunk/WebContent/current.html
@@ -15,15 +15,16 @@
 	height:31px;
 	z-index:1;
 	left: 172px;
-	top: 46px;
+	top: 69px;
 }
 #Layer2 {
-	position:absolute;
-	width:125px;
-	height:32px;
-	z-index:2;
+	position: absolute;
+	width: 125px;
+	height: 35px;
+	z-index: 2;
 	left: 300px;
-	top: 46px;
+	top: 69px;
+	
 	
 }
 #Layer3 {
@@ -32,7 +33,7 @@
 	height:32px;
 	z-index:3;
 	left: 425px;
-	top: 46px;
+	top: 69px;
 }
 #Layer4 {
 	position:absolute;
@@ -40,7 +41,7 @@
 	height:32px;
 	z-index:4;
 	left: 547px;
-	top: 46px;
+	top: 69px;
 }
 #Layer5 {
 	position:absolute;
@@ -48,7 +49,7 @@
 	height:33px;
 	z-index:5;
 	left: 669px;
-	top: 46px;
+	top: 69px;
 }
 #Layer6 {
 	position:absolute;
@@ -96,7 +97,7 @@ a:active {
 <body>
 <div id="Layer8"></div>
 <div id="Layer7">
-  <h1 align="center"><a href="#">物流状态</a></h1>
+  <h1 align="center" style="margin-top:15px"><a href="#">物流状态</a></h1>
 </div>
 <div id="Layer5">
   <h1 align="center"><a href="recommend.html">推荐</a></h1>
@@ -107,13 +108,14 @@ a:active {
 <div id="Layer3">
   <h1 align="center"><a href="history.html">历史</a></h1>
 </div>
-<div id="Layer2">
-  <h1 align="center"><a href="current.html" style="background-image: url(img/menu_hover.jpg);background-size:100px,33px;">当前</a></h1>
+<div id="Layer2" style="background-image: url(img/menu_hover.jpg);background-size:120px,36px;">
+  <h1 align="center"><a href="current.html" >当前</a></h1>
 </div>
 <div id="Layer1">
   <h1 align="center"><a href="index.html">主页</a></h1>
 </div>
 <div id="upperpart_display" class="upperpart_content">
+<img src="img/loader.gif" style="margin-top:80px;width:50px;height:50px;"> </img>
 </div>
 <div id="lowerpart_display" class="chart_history">物流信息载入中...</div>
 <script type="text/javascript" src="js/current.js"></script>
