--- a/trunk/WebContent/favorite.html
+++ b/trunk/WebContent/favorite.html
@@ -14,7 +14,7 @@
 	height:31px;
 	z-index:1;
 	left: 172px;
-	top: 46px;
+	top: 69px;
 }
 #Layer2 {
 	position:absolute;
@@ -22,7 +22,7 @@
 	height:32px;
 	z-index:2;
 	left: 300px;
-	top: 46px;
+	top: 69px;
 }
 #Layer3 {
 	position:absolute;
@@ -30,7 +30,7 @@
 	height:32px;
 	z-index:3;
 	left: 425px;
-	top: 46px;
+	top: 69px;
 }
 #Layer4 {
 	position:absolute;
@@ -38,7 +38,7 @@
 	height:32px;
 	z-index:4;
 	left: 547px;
-	top: 46px;
+	top: 69px;
 }
 #Layer5 {
 	position:absolute;
@@ -46,7 +46,7 @@
 	height:33px;
 	z-index:5;
 	left: 669px;
-	top: 46px;
+	top: 69px;
 }
 #Layer6 {
 	position:absolute;
@@ -92,12 +92,12 @@ a:active {
 
 <body>
 <div id="Layer6">
-  <h1 align="center"><a href="#">价格走势</a></h1>
+  <h1 align="center" style="margin-top:15px"><a href="#">价格走势</a></h1>
 </div>
 <div id="Layer5">
   <h1 align="center"><a href="recommend.html">推荐</a></h1>
 </div>
-<div id="Layer4">
+<div id="Layer4" style="background-image: url(img/menu_hover.jpg);background-size:120px,36px;">
   <h1 align="center"><a href="favorite.html">收藏</a></h1>
 </div>
 <div id="Layer3">
