--- a/trunk/WebContent/history.html
+++ b/trunk/WebContent/history.html
@@ -17,7 +17,7 @@
 	height:31px;
 	z-index:1;
 	left: 172px;
-	top: 46px;
+	top: 69px;
 }
 #Layer2 {
 	position:absolute;
@@ -25,7 +25,7 @@
 	height:32px;
 	z-index:2;
 	left: 300px;
-	top: 46px;
+	top: 69px;
 }
 #Layer3 {
 	position:absolute;
@@ -33,7 +33,7 @@
 	height:32px;
 	z-index:3;
 	left: 425px;
-	top: 46px;
+	top: 69px;
 }
 #Layer4 {
 	position:absolute;
@@ -41,7 +41,7 @@
 	height:32px;
 	z-index:4;
 	left: 547px;
-	top: 46px;
+	top: 69px;
 }
 #Layer5 {
 	position:absolute;
@@ -49,7 +49,7 @@
 	height:33px;
 	z-index:5;
 	left: 669px;
-	top: 46px;
+	top: 69px;
 }
 #Layer6 {
 	position:absolute;
@@ -62,7 +62,7 @@
 #Layer7 {
 	position:absolute;
 	width:200px;
-	height:35px;
+	height:70px;
 	z-index:7;
 	left: 421px;
 	top: 376px;
@@ -74,7 +74,7 @@ body {
 #Layer8 {
 	position:absolute;
 	width:200px;
-	height:38px;
+	height:70px;
 	z-index:8;
 	left: 647px;
 	top: 376px;
@@ -103,10 +103,10 @@ a:active {
 
 <body>
 <div id="Layer7">
-  <h1 align="center"><a href="#" onclick="pHistory.goCategoryAnalysis()">类型分析</a></h1>
+  <h1 align="center" style="margin-top:15px"><a href="#" onclick="pHistory.goCategoryAnalysis()">类型分析</a></h1>
 </div>
 <div id="Layer6">
-  <h1  id ="amount_label" align="center"><a  href="#" onclick="pHistory.goAmountStat()">金额统计</a></h1>
+  <h1  id ="amount_label" align="center" style="margin-top:15px"><a  href="#" onclick="pHistory.goAmountStat()">金额统计</a></h1>
 </div>
 <div id="Layer5">
   <h1 align="center"><a href="recommend.html">推荐</a></h1>
@@ -114,7 +114,7 @@ a:active {
 <div id="Layer4">
   <h1 align="center"><a href="favorite.html">收藏</a></h1>
 </div>
-<div id="Layer3">
+<div id="Layer3" style="background-image: url(img/menu_hover.jpg);background-size:120px,36px;">
   <h1 align="center"><a href="history.html">历史</a></h1>
 </div>
 <div id="Layer2">
@@ -124,7 +124,7 @@ a:active {
   <h1 align="center"><a href="index.html">主页</a></h1>
 </div>
 <div id="Layer8">
-  <h1 align="center"> <a href="#" onclick="pHistory.goSetConsumptionLimit()">消费上限</a></h1>
+  <h1 align="center" style="margin-top:15px"> <a href="#" onclick="pHistory.goSetConsumptionLimit()">消费上限</a></h1>
 </div>
 <div id="Layer9"></div>
 
