--- a/trunk/WebContent/recommend.html
+++ b/trunk/WebContent/recommend.html
@@ -165,7 +165,7 @@ a:active {
 </tr>
 </table>
 </div>
-<div id="lowerpart_display" class="chart_history">推荐物品载入中...</div>
+<div id="lowerpart_display" class="chart_history">推荐物品载入中...<br/>首次使用此功能请先查看历史交易或收藏</div>
 <script type="text/javascript" src="js/recommend.js"></script>
 </body>
 </html>
